# realworld-rust-actix-web

./: .env  Cargo.toml  run-api-tests.sh
src/: lib.rs  main.rs
src/models/: article.rs  comment.rs  mod.rs  user.rs
src/persistence/: article.rs  comment.rs  mod.rs  tag.rs  user.rs
src/routes/: articles.rs  comments.rs  mod.rs  profiles.rs  tags.rs  users.rs
src/utils/: mod.rs
