[package]
name = "realworld-rust-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.11.3"
jsonwebtoken = "9.2.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
data-encoding = "2.5.0"
bcrypt = "0.15.0"
futures = "0.3.30"
actix-web-httpauth = "0.8.1"
chrono = { version = "0.4.35", features = ["serde"] }
slugify = "0.1.0"
sqlx = { version = "0.7.4", features = ["chrono", "mysql", "runtime-tokio"] }
serde_json = "1.0.114"
num_cpus = "1.16.0"
actix-cors = "0.7.0"
